Configure routes as described in task. Add tests.

--- a/product-service/package.json
+++ b/product-service/package.json
@@ -2,8 +2,8 @@
   "name": "product-service",
   "version": "1.0.0",
   "scripts": {
-    "start": "sls offline",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "sls offline --httpPort 3001",
+    "test": "vitest",
     "deploy:dev": "sls deploy",
     "deploy:prod": "sls deploy --stage prod",
     "remove": "sls remove"
@@ -15,6 +15,7 @@
     "esbuild": "^0.14.49",
     "serverless": "^3.21.0",
     "serverless-esbuild": "^1.31.0",
-    "serverless-offline": "^8.8.1"
+    "serverless-offline": "^8.8.1",
+    "vitest": "^0.18.1"
   }
 }
